Implement student registration system with GUI
- Added Main class to launch the RegisterApplication.
- Created Register class to manage Student and Subject objects.
- Developed RegisterApplication class for the GUI, allowing user interaction for student and subject registration.
- Implemented Student class with attributes for student code, name, and surname.
- Implemented Subject class with attributes for subject code, name, and credit.
- Integrated JComboBox for selecting students and subjects in the GUI.
- Added action listeners for buttons to handle user actions.
- Enhanced GUI layout with JPanel and FlowLayout for better organization.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,34 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "chapter9.test2.Main",
+            "projectName": "java_in_class_fa9d375a"
+        },
+        {
+            "type": "java",
+            "name": "ex1",
+            "request": "launch",
+            "mainClass": "chapter9.ex1",
+            "projectName": "java_in_class_fa9d375a"
+        },
+        {
+            "type": "java",
+            "name": "RegisterApplication",
+            "request": "launch",
+            "mainClass": "chapter9.test2.RegisterApplication",
+            "projectName": "java_in_class_fa9d375a"
+        },
+        {
+            "type": "java",
+            "name": "test",
+            "request": "launch",
+            "mainClass": "chapter3.New.test",
+            "projectName": "java_in_class_fa9d375a"
+        },
+        {
+            "type": "java",
             "name": "ex1",
             "request": "launch",
             "mainClass": "chapter9.test.ex1",
