Enhance RegisterApplication GUI; add JTextArea for results display and command buttons for save/cancel functionality

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
             "name": "Main",
             "request": "launch",
             "mainClass": "chapter9.test2.Main",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "chapter9.test2.Main",
             "projectName": "java_in_class_fa9d375a"
         },
         {
