--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ex2",
+            "request": "launch",
+            "mainClass": "chapter9.ex2",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
             "name": "ex1",
             "request": "launch",
             "mainClass": "chapter9.ex1",
