--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "AppProduct",
+            "request": "launch",
+            "mainClass": "chapter11.AppProduct",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
+            "name": "AppReadWriteFile",
+            "request": "launch",
+            "mainClass": "chapter11.AppReadWriteFile",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
             "name": "ConstructorFinalizerTest",
             "request": "launch",
             "mainClass": "chapter10.ConstructorFinalizerTest",
