--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ex10",
+            "request": "launch",
+            "mainClass": "chapter5.ex10",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
             "name": "Car_Installment",
             "request": "launch",
             "mainClass": "chapter5.test_ex.Car_Installment",
