--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,48 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ass3_02",
+            "request": "launch",
+            "mainClass": "test_sbt.test_old_ass.ass3.ass3_02",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
+            "name": "ass3_01",
+            "request": "launch",
+            "mainClass": "test_sbt.test_old_ass.ass3.ass3_01",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
+            "name": "ass2_04",
+            "request": "launch",
+            "mainClass": "test_sbt.test_old_ass.ass2_04",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
+            "name": "ass2_03",
+            "request": "launch",
+            "mainClass": "test_sbt.test_old_ass.ass2_03",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
+            "name": "ass2_02",
+            "request": "launch",
+            "mainClass": "test_sbt.test_old_ass.ass2_02",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
+            "name": "ass2_01",
+            "request": "launch",
+            "mainClass": "test_sbt.test_old_ass.ass2_01",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
             "name": "Car_Installment",
             "request": "launch",
             "mainClass": "chapter5.text_ex2.Car_Installment",
