--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Ass3_04",
+            "request": "launch",
+            "mainClass": "Ass3.Ass3_04",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
+            "name": "ex11",
+            "request": "launch",
+            "mainClass": "chapter4.ex11",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
             "name": "Ass3_02",
             "request": "launch",
             "mainClass": "Ass3.Ass3_02",
