--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Fibonacci_Program",
+            "request": "launch",
+            "mainClass": "chapter6.New.Fibonacci_Program",
+            "projectName": "java_in_class_fa9d375a"
+        },
+        {
+            "type": "java",
             "name": "Gpa_6806021612036",
             "request": "launch",
             "mainClass": "Midterm.Gpa_6806021612036",
