Add new ex6 class with WindowsGridLayout GUI; implement layout, event handling, and user input features

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ex6",
+            "request": "launch",
+            "mainClass": "chapter9.New.ex6",
+            "projectName": "java_in_class_63e39e38"
+        },
+        {
+            "type": "java",
             "name": "ex4",
             "request": "launch",
             "mainClass": "chapter9.New.ex4",
