--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ex11",
+            "request": "launch",
+            "mainClass": "chapter9.New.ex11",
+            "projectName": "java_in_class_fa9d375a"
+        },
+        {
+            "type": "java",
             "name": "ex8",
             "request": "launch",
             "mainClass": "chapter9.New.ex8",
